[gd_scene load_steps=4 format=3 uid="uid://cq4faymhh1jfi"]

[ext_resource type="FontFile" uid="uid://cqyiip1ldq5u1" path="res://Art/Minecraft.ttf" id="1_ab6y4"]
[ext_resource type="Script" path="res://Scene/menu/menu.gd" id="1_b6gh8"]
[ext_resource type="Texture2D" uid="uid://sd0mo0ro27c7" path="res://Art/castle-medieval-pixel-art-pixelated-field-2254356-wallhere.com.jpg" id="2_mkrdw"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b6gh8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mkrdw")

[node name="Goal_Tut" type="Label" parent="."]
layout_mode = 0
offset_left = 377.0
offset_top = 70.0
offset_right = 981.0
offset_bottom = 143.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("1_ab6y4")
text = "Marco is a single jeweller from the city, he decided to charm the princess.
Sadly he isn't alone in this goal and the princess is materialistic
You will have 7 fierce days to conquer her heart with your charm making
Good luck Marco !"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -192.0
offset_right = 398.735
offset_bottom = 298.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ab6y4")
theme_override_font_sizes/font_size = 80
text = "PLAY / CONTINUE"

[node name="TutoButon" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ab6y4")
theme_override_font_sizes/font_size = 80
toggle_mode = true

[node name="FullScreeButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ab6y4")
theme_override_font_sizes/font_size = 80
text = "Full Screen"

[node name="RestartButon" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ab6y4")
theme_override_font_sizes/font_size = 80
text = "RESTART"

[node name="ExitButon" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ab6y4")
theme_override_font_sizes/font_size = 80
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="button_down" from="VBoxContainer/TutoButon" to="." method="_on_tuto_buton_button_down"]
[connection signal="button_up" from="VBoxContainer/TutoButon" to="." method="_on_tuto_buton_button_up"]
[connection signal="pressed" from="VBoxContainer/TutoButon" to="." method="_on_tuto_buton_pressed"]
[connection signal="pressed" from="VBoxContainer/FullScreeButton" to="." method="_on_full_scree_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButon" to="." method="_on_restart_buton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButon" to="." method="_on_exit_buton_pressed"]
